tests/errors/w_pxd_assign.pxd
# Assignment doesn't work so should generate a warning
# (an error would be better but might break too much existing code).
cdef double x = 1.0
cdef const double y = 2.0
